--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-helper-hooks": "^1.11.0",
     "react-icons": "^5.0.1",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/node": "^20",
