--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ducanh2912/next-pwa": "^10.2.5",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "axios": "^1.6.7",
